--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "dependencies": {
-    "@vitejs/plugin-vue": "^5.2.4",
-    "openai": "^5.1.1",
-    "vite": "^6.3.5"
+  "name": "recipe-shopping-assistant",
+  "version": "1.0.0",
+  "description": "Recipe Shopping Assistant Application",
+  "scripts": {
+    "start": "cd server && npm start",
+    "dev": "cd server && npm run dev",
+    "client": "cd client && npm run dev",
+    "install-all": "npm install && cd client && npm install && cd ../server && npm install"
   }
 }
