--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "recipe-shopping-assistant-client",
+  "name": "recipe-shopping-assistant",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,20 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vueuse/core": "^10.0.0",
+    "@heroicons/vue": "^2.2.0",
     "axios": "^1.9.0",
-    "pinia": "^2.3.1",
-    "vue": "^3.3.0",
-    "vue-router": "^4.5.1"
+    "pinia": "^2.1.7",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@vitejs/plugin-vue": "^4.5.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.0",
-    "vue-tsc": "^1.8.0"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4",
+    "vue-tsc": "^1.8.27"
   }
 }
